--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,10 @@
-version: "3.7"
+version: "3.8"
 
 services:
   mongodb:
     container_name: mongo-dev
-    image: mongo:4.2
+    image: mongo:4.4
+    # restart: always
     environment:
       - MONGO_INITDB_ROOT_USERNAME=${MONGO_ROOT_USER}
       - MONGO_INITDB_DATABASE=auth
@@ -18,6 +19,7 @@ services:
   mongo-express:
     container_name: mongo-express
     image: mongo-express
+    # restart: always
     depends_on:
       - mongodb
     networks: 
