--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   mongodb:
     container_name: mongo-dev
     image: mongo:4.4
-    # restart: always
+    restart: always
     environment:
       - MONGO_INITDB_ROOT_USERNAME=${MONGO_ROOT_USER}
       - MONGO_INITDB_DATABASE=auth
@@ -19,7 +19,7 @@ services:
   mongo-express:
     container_name: mongo-express
     image: mongo-express
-    # restart: always
+    restart: always
     depends_on:
       - mongodb
     networks: 
